--- a/configs/KITTI04-12.yaml
+++ b/configs/KITTI04-12.yaml
@@ -67,4 +67,4 @@ Viewer.ViewpointY: -250
 Viewer.ViewpointZ: -0.1
 Viewer.ViewpointF: 2000
 
-Map.mapfile: map_video.bin
+Map.mapfile: map_kitti.bin
